Fix spacing

--- a/packages/gitbook/src/components/DocumentView/OpenAPI/style.css
+++ b/packages/gitbook/src/components/DocumentView/OpenAPI/style.css
@@ -101,7 +101,7 @@
 /* Method Tags */
 .openapi-method,
 .openapi-statuscode {
-    @apply m-0 h-5 min-w-9 justify-center rounded-md text-xs straight-corners:rounded-none circular-corners:rounded-lg uppercase font-mono items-center shrink-0 font-semibold px-1.5 py-0.5 mr-2 text-tint-12/8 leading-tight align-middle inline-flex whitespace-nowrap;
+    @apply m-0 h-5 min-w-9 justify-center rounded-md text-xs straight-corners:rounded-none circular-corners:rounded-lg uppercase font-mono items-center shrink-0 font-semibold px-1.5 py-0.5 text-tint-12/8 leading-tight align-middle inline-flex whitespace-nowrap;
 }
 
 .openapi-method-small {}
@@ -111,7 +111,7 @@
 }
 
 .toclink .openapi-method {
-    @apply text-[0.625rem] mr-0 flex items-center justify-center;
+    @apply text-[0.625rem] flex items-center justify-center;
 }
 
 .openapi-method-get,
@@ -408,7 +408,7 @@
 }
 
 .openapi-response-tab-content {
-    @apply flex items-baseline truncate grow shrink max-w-max basis-full mr-auto;
+    @apply flex items-baseline gap-2 truncate grow shrink max-w-max basis-full mr-auto;
     @apply text-left text-pretty relative leading-tight text-tint select-text;
 }
 
@@ -582,7 +582,7 @@
 }
 
 .openapi-response-examples-statuscode-title {
-    @apply flex items-center;
+    @apply flex items-center gap-2;
 }
 
 .openapi-response-examples-header .openapi-select > button,
